--- a/02Layout/app/src/main/res/values/strings.xml
+++ b/02Layout/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!--LinearLayout elements strings-->
+    <string name="to">mail</string>
+    <string name="subject">Suibject</string>
+    <string name="message">Message</string>
+    <string name="send">Send</string>
+    <string name="validate">validate</string>
+
+
 </resources>
